# shadow

./: .pre-commit-config.yaml  Cargo.toml  Justfile  LICENSE  README.md
.forgejo/workflows/: test.yml
.github/workflows/: test.yml
src/: aliases.rs  cli.rs  commands.rs  config.rs  error.rs  main.rs  shadows.rs
