[package]
name = "shadow-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"

[dev-dependencies]
temp-env = "0.3"
tempfile = "3.14"

[[bin]]
name = "shdw"
path = "src/main.rs"
